# udae-backend

./: .gitignore  README.md  pyproject.toml
adapters/: README.md
adapters/api/: README.md
adapters/gdocs/: README.md
adapters/web/: README.md
adapters/word/: README.md
contracts/: README.md  __init__.py  adapter_to_core.py  amanecer_to_fenix.py  arana_to_ire.py  fenix_to_arana.py
core/: README.md
core/amanecer/: README.md
core/amanecer/apa7_layout/: __init__.py  extractor.py  rules.py  stage.py  validator.py
core/arana/: README.md  __init__.py  aggregator.py  decision.py  precedence.py  stage.py
core/fenix/: README.md
core/ire/: README.md
core/kernel/: README.md  __init__.py  context.py  errors.py  pipeline.py  stages.py
core/models/: README.md  __init__.py  evidence.py  hashes.py  rule.py  snapshot.py  verdict.py
governance/: README.md  compliance_policy.md  versioning_policy.md
governance/adr/: README.md
persistence/: README.md
persistence/audit_store/: README.md
persistence/rule_store/: README.md
persistence/snapshot_store/: README.md
tests/: README.md
tests/architecture_guards/: README.md  test_layer_boundaries.py
tests/auditability/: README.md
tests/determinism/: README.md  test_hash_stability.py
tests/integration/: README.md  test_apa7_layout_stage.py  test_arana_decision_stage.py  test_pipeline.py
tests/unit/: README.md
